--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,13 +4,15 @@
     align-items: center;
     flex-direction: row;
     padding: 0 20px 0 20px;
-    border-bottom: 1px solid black;
+    background-color: #fff !important;
+    width: 100%;
 }
 
 .navLinks{
     display: flex;
     flex-direction: row;
 }
+
 .navLinks a {
     text-decoration: none;
     color: black;
@@ -55,10 +57,12 @@
 }
 
 .menu .icon {
+    margin-left: 30px;
     transition-duration: 0.5s;
     position: absolute;
     height: 2px;
     width: 20px;
+    margin-right: 30px;
     background-color: #212121;
 }
 
@@ -151,7 +155,7 @@
 
 @media (max-width: 700px){
     .hamburguer{
-        display: block;
+        display: flex;
     } 
 
     .navLinks{
