--- a/src/components/ItemListContainer/ItemListContainer.css
+++ b/src/components/ItemListContainer/ItemListContainer.css
@@ -1,14 +1,31 @@
 .heroContainer{
+    position: relative;
     width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
+    height: 500px;
     top: 0;
-    background-color: var(--bg-light);
+    background: url('https://images.unsplash.com/photo-1613420568020-0c0e3764d499?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-.heroMessage{
-    margin-top: 50px;
-    text-align: center;
+.heroContainer::after{
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    content: "";
+    background-color: rgba(0, 0, 0, 0.6);
+    
+}
+
+.heroContainer h1{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    z-index: 2;
 }
 
