--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,6 +1,8 @@
 .itemCard{
     overflow: hidden;
-    padding: 5px;
+    box-shadow: 0px 0px 30px -20px black;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .itemImageContainer{
@@ -19,7 +21,7 @@
 
 .itemInfo{
     margin-top: 20px;
-    min-height: 80px;
+    padding: 20px;
 }
 
 .itemName{
