--- a/src/components/ItemCount/ItemCount.css
+++ b/src/components/ItemCount/ItemCount.css
@@ -1,19 +1,28 @@
 .counter{
     width: 100%;
+    height: 50px;
     display: flex;
     justify-content: space-between;
     border: 1px solid black;
-    padding-left: 10px;
+    padding: 0 10px;
+    align-items: center;
+}
+
+.counterQuantity{
+    font-size: 2em
 }
 
 .counterIcon{
     cursor: pointer;
+    font-size: 2em;
     background-color: transparent;
     border: none;
+    margin-top: -5px;
 }
 
 .btnAddItem{
     width: 100%;
+    height: 70px;
     border: none;
     background-color: black;
     color: white;
