--- a/src/components/CartElement/CartElement.css
+++ b/src/components/CartElement/CartElement.css
@@ -12,10 +12,39 @@
 .removeItem{
     background-color: transparent;
     border: 1px solid #DC3545;
-    border-radius: 10px;
     color: #DC3545;
     transition: all 250ms ease;
     transform: translateY(-5px);
+    width: 100%;
+    height: 40px;
+}
+
+.cm-link{
+    all: unset;
+    cursor: pointer;
+}
+
+.cm-link svg{
+    transition: all 200ms ease-in;
+}
+
+.cm-link:hover > svg{
+    margin-right: 5px !important;
+}
+
+.cm-link:hover{
+    color: black;
+    font-weight: 500;
+}
+
+.checkout{
+    background-color: transparent;
+    border: 1px solid #DC3545;
+    color: #DC3545;
+    transition: all 250ms ease;
+    transform: translateY(-5px);
+    width: 100%;
+    height: 40px;
 }
 
 .removeItem:hover{
